# Bike-Network-System

./: README.md
micro-services/bikes/: .env.example  .gitattributes  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
micro-services/bikes/.specify/memory/: constitution.md
micro-services/bikes/.specify/templates/: plan-template.md  tasks-template.md
micro-services/bikes/app/: __init__.py  auth.py  config.py  errors.py
micro-services/bikes/app/models/: bike.py
micro-services/bikes/app/repositories/: bike_repository.py
micro-services/bikes/app/schemas/: bike.py
micro-services/bikes/app/services/: bike_service.py  rabbitmq_service.py
micro-services/bikes/app/utils/: pagination.py
micro-services/bikes/migrations/versions/: 8d4d06352601_create_bikes_table.py
micro-services/bikes/specs/001-bike-crud-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
micro-services/bikes/tests/: conftest.py
micro-services/bikes/tests/integration/: test_bikes_api.py  test_rabbitmq_integration.py
micro-services/bikes/tests/unit/: test_bike_repository.py  test_bike_service.py  test_rabbitmq_service.py
micro-services/map/: .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  run-local.ps1
micro-services/map/app/: __init__.py  auth.py  config.py  errors.py  firebase.py
micro-services/map/app/messaging/: bike_created.py  bike_deleted.py  bike_status_updated.py  consumer.py  rpc.py  runner.py
micro-services/map/app/models/: location.py
micro-services/map/app/repositories/: location_repository.py
micro-services/map/app/schemas/: location.py
micro-services/map/app/seeding/: cli.py  location_seed_data.py
micro-services/map/app/services/: location_service.py
micro-services/map/migrations/: env.py
micro-services/map/migrations/versions/: a1b2c3d4e5f6_create_locations_table.py
micro-services/map/tests/: conftest.py  mock_bike_locations.py
micro-services/map/tests/integration/: test_map_api.py  test_mock_locations_api.py
micro-services/map/tests/unit/: test_bike_created_handler.py  (+2 more)
(+175 files in other folders)
