[project]
name = "map"
version = "0.1.0"
description = "Map / geolocation microservice for the Bike Network System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0,<4.0",
    "flask-sqlalchemy>=3.0,<4.0",
    "flask-migrate>=4.0,<5.0",
    "pydantic>=2.0,<3.0",
    "pymysql[rsa]>=1.1,<2.0",
    "pika>=1.3.2,<2.0",
    "python-dotenv>=1.0,<2.0",
    "firebase-admin>=7.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration_broker: tests requiring a live RabbitMQ broker",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-flask>=1.3,<2.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
]
